switch: add opengl support (software, osmesa)

--- a/include/SDL_config.h.in
+++ b/include/SDL_config.h.in
@@ -355,6 +355,7 @@
 #undef SDL_VIDEO_DRIVER_VIVANTE_VDK
 #undef SDL_VIDEO_DRIVER_QNX
 #undef SDL_VIDEO_DRIVER_SWITCH
+#undef SDL_VIDEO_DRIVER_SWITCH_GL
 
 #undef SDL_VIDEO_RENDER_D3D
 #undef SDL_VIDEO_RENDER_D3D11
